Fix spacing issue for recipe webpages
recipe-content container was not expanding to the bottom of the screen
leaving the dark orange background peeking down at the bottom. Resolved
via making the body a flexbox.

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,9 @@ html,
 body {
     padding: 0;
     margin: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
     background-color: #BC5C0C;
     color: #FFFFDC;
     font-family: Inter, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
